# xage

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
Xdocs/: CurrentState_APROAR.txt  Layout.txt
Xtls/: SourceMods.txt  XynDocker.txt  XynPro_Instructions-HowTo.txt  XynTools-HowTo.txt  git.txt
config/: prometheus.yml
kernels/: cuda_kernels.cu  opencl_kernels.cl  wgpu_shaders.wgsl
scripts/: compression_benchmark.rs  data_collection.rs  data_preprocessing.rs  evaluation.rs  training.rs
src/: lib.rs  main.rs
src/aproar/: Dockerfile  mod.rs
src/constants/: Dockerfile  mod.rs
src/data_processing/: Dockerfile  dataset.rs  mod.rs  tokenizer.rs
src/expert/: Dockerfile  bevy_expert.rs  gating.rs  mod.rs  research_expert.rs  router.rs  rust_expert.rs  solana_expert.rs
src/inference/: Dockerfile  cross_fusion_inference.py
src/lsm/: Dockerfile  encoder.rs  mod.rs  neuron.rs  readout.rs  reservoir.rs  synapse.rs
src/machines/: Dockerfile  liquid_state_machine.rs  mod.rs  neural_turing_machine.rs
src/model_interpretability/: Dockerfile  decision_visualization.rs  feature_importance.rs  lime.rs  mod.rs  shap.rs
src/models/: Dockerfile  gpt_neo_model.rs  mod.rs  rustbert_model.rs
src/multi_modal/: Dockerfile  audio_processor.rs  (+4 more)
tests/: compression_tests.rs  constants_tests.rs  data_loader_tests.rs  lsm_tests.rs  model_interpretability_tests.rs  model_tests.rs  multi_modal_tests.rs  ntm_tests.rs  omnixerror_tests.rs  omnixmetry_tests.rs  plsm_tests.rs  tokenizer_tests.rs  transformers_tests.rs  utils_lxsl_tests.rs
(+46 files in other folders)
