[package]
name = "xage"
version = "0.0.7"
edition = "2021"
authors = ["Lord Xyn <LordXyn@proton.me>"]
repository = "https://github.com/arcmoonstudios/xage"
license = "MIT"
readme = "README.md"
build = "build.rs"

[build-dependencies]
anyhow = "1.0.89"
walkdir = "2.5.0"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4"
colored = "2.0"
dotenv = "0.15.0"
git2 = "0.15"
lazy_static = "1.4"
once_cell = "1.20.2"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15"
parking_lot = "0.12.3"
regex = "1.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }

[profile.dev]
debug = true
lto = false
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[workspace]
resolver = "2"
